extends Control
# TitleScreen ê°œì„  - ì¹´ì´ë¡œì†Œí”„íŠ¸ ìŠ¤íƒ€ì¼

# UI ìš”ì†Œ (using unique name syntax)
@onready var main_title: Label = %MainTitle
@onready var sub_title: Label = %SubTitle

# ë²„íŠ¼ë“¤
@onready var career_btn: Button = %NewGameButton  # ìœ¡ì„±ê²Œì„ ë²„íŠ¼ (ì„¸ì´ë¸Œ ìŠ¬ë¡¯ ì„ íƒìœ¼ë¡œ ì´ë™)
@onready var myteam_btn: Button = %MyTeamButton
@onready var personality_demo_btn: Button = %PersonalityDemoButton
@onready var options_btn: Button = %OptionsButton
@onready var exit_btn: Button = %ExitButton

# ë¯¸ë‹ˆ ìºë¦­í„°ë“¤ (not marked as unique - using path)
@onready var mini_characters = [
	$MiniCharacters/Player1,
	$MiniCharacters/Player2,
	$MiniCharacters/Player3,
	$MiniCharacters/Player4,
	$MiniCharacters/Player5
]

# êµ¬ë¦„ë“¤ (not marked as unique - using path)
@onready var clouds = [$CloudLayer/Cloud1, $CloudLayer/Cloud2, $CloudLayer/Cloud3]

# ì„¸ì´ë¸Œ ìŠ¬ë¡¯ íŒì—…
@onready var save_slots_popup: Panel = %SaveSlotsPopup

# ì‚¬ìš´ë“œ í† ê¸€
@onready var music_toggle: Button = %MusicToggle
@onready var sound_toggle: Button = %SoundToggle

# ì–¸ì–´ ì„ íƒ
@onready var language_button: Button = %LanguageButton
@onready var language_popup: AcceptDialog = %LanguagePopup
@onready var korean_button: Button = %KoreanButton
@onready var english_button: Button = %EnglishButton
@onready var japanese_button: Button = %JapaneseButton
@onready var chinese_button: Button = %ChineseButton
@onready var select_button: Button = %SelectButton

# í˜„ì¬ ì„ íƒëœ ì–¸ì–´
var selected_language = "English"

# ì• ë‹ˆë©”ì´ì…˜ ë³€ìˆ˜
var time_passed = 0.0
var character_speeds = []
var cloud_speeds = []
var button_hover_states = {}


func _ready():
	print("[TitleScreenImproved] Initializing with menu buttons...")

	# íƒ€ì´í‹€ ì• ë‹ˆë©”ì´ì…˜
	_animate_title_entrance()

	# í—¤ë“œë¦¬ìŠ¤ ëª¨ë“œë‚˜ --check-only ì˜µì…˜ì´ë©´ ë°”ë¡œ ì¢…ë£Œ
	var cmdline_args = OS.get_cmdline_args()
	var is_check_only = "--check-only" in cmdline_args
	var is_contract_tests = "--contract-tests" in cmdline_args

	if Engine.is_editor_hint():
		print("[TitleScreenImproved] Editor mode")
	elif is_check_only:
		print("[TitleScreenImproved] Check-only mode, exiting...")
		get_tree().quit(0)
		return
	elif OS.has_feature("headless"):
		if is_contract_tests:
			print("[TitleScreenImproved] Headless contract-tests mode, skipping UI init...")
		else:
			print("[TitleScreenImproved] Headless mode, exiting...")
			get_tree().quit(0)
			return
	else:
		# ë²„íŠ¼ ìŠ¤íƒ€ì¼ ë° ì—°ê²°
		_apply_custom_styles()
		_connect_buttons()
		_animate_menu_entrance()

	print("[TitleScreenImproved] Ready!")


func _hide_all_buttons():
	"""ëª¨ë“  ë²„íŠ¼ê³¼ ë©”ë‰´ ìš”ì†Œ ìˆ¨ê¸°ê¸°"""
	if $MenuContainer:
		$MenuContainer.visible = false
	if $FooterInfo:
		$FooterInfo.visible = false
	if language_button:
		language_button.visible = false
	if save_slots_popup:
		save_slots_popup.visible = false


func _start_auto_transition():
	"""ìë™ ì „í™˜ ì‹œì‘ (3ì´ˆ í›„ ë©”ì¸ í™ˆìœ¼ë¡œ)"""
	# ë¡œë”© ì¸ë””ì¼€ì´í„° í‘œì‹œ (ì„ íƒì‚¬í•­)
	_show_loading_indicator()

	# 3ì´ˆ í›„ ìë™ìœ¼ë¡œ ë©”ì¸ í™ˆìœ¼ë¡œ ì´ë™
	await get_tree().create_timer(3.0).timeout
	_auto_start_game()


func _show_loading_indicator():
	"""ê°„ë‹¨í•œ ë¡œë”© ì¸ë””ì¼€ì´í„° í‘œì‹œ"""
	var loading_label = Label.new()
	loading_label.text = "Loading..."
	loading_label.add_theme_font_size_override("font_size", 24)
	loading_label.set_anchors_and_offsets_preset(Control.PRESET_CENTER)
	loading_label.position.y += 200  # íƒ€ì´í‹€ ì•„ë˜ë¡œ
	add_child(loading_label)

	# ì ë“¤ ì• ë‹ˆë©”ì´ì…˜ (ë¬´í•œ ë£¨í”„ ì œê±°, 3ë²ˆë§Œ ë°˜ë³µ)
	var tween = get_tree().create_tween().set_loops(3)
	tween.tween_method(_update_loading_text.bind(loading_label), 0.0, 3.0, 1.0)


func _update_loading_text(dots: int, label: Label):
	"""ë¡œë”© í…ìŠ¤íŠ¸ ì• ë‹ˆë©”ì´ì…˜"""
	var dot_string = ""
	for i in range(int(dots)):
		dot_string += "."
	label.text = "Loading" + dot_string


func _auto_start_game():
	"""ìë™ìœ¼ë¡œ ê²Œì„ ì‹œì‘ (ê¸°ì¡´ new game ë¡œì§ ì‚¬ìš©)"""
	print("[TitleScreenImproved] Auto-starting game...")
	# í™”ë©´ ì „í™˜ ì• ë‹ˆë©”ì´ì…˜
	var tween = get_tree().create_tween()
	tween.tween_property(self, "modulate:a", 0.0, 0.3)
	tween.tween_callback(
		func():
			# HomeImproved (ìœ¡ì„± ê²Œì„ ë©”ì¸)ë¡œ ì´ë™
			get_tree().change_scene_to_file("res://scenes/HomeImproved.tscn")
	)


func _apply_custom_styles():
	# ë°°ê²½ í•„ë“œ ìŠ¤íƒ€ì¼
	var stadium_bg = $StadiumBackground
	if stadium_bg:
		var style = StyleBoxFlat.new()
		style.bg_color = Color(0.2, 0.7, 0.3, 1)
		style.corner_radius_top_left = 0
		style.corner_radius_top_right = 0
		style.shadow_size = 10
		style.shadow_offset = Vector2(0, -5)
		style.shadow_color = Color(0, 0, 0, 0.3)
		stadium_bg.add_theme_stylebox_override("panel", style)

	# ë²„íŠ¼ ìŠ¤íƒ€ì¼
	var buttons = [career_btn, myteam_btn, personality_demo_btn, options_btn, exit_btn]
	for button in buttons:
		if button:
			_setup_button_style(button)

	# ì„¸ì´ë¸Œ ìŠ¬ë¡¯ íŒì—… ìŠ¤íƒ€ì¼
	if save_slots_popup:
		save_slots_popup.add_theme_stylebox_override("panel", CustomStyles.create_card_panel())

	# ìŠ¬ë¡¯ ì¹´ë“œ ìŠ¤íƒ€ì¼
	var slots = [
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot1,
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot2,
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot3
	]
	for slot in slots:
		if slot:
			if slot.has_node("EmptyLabel"):
				slot.add_theme_stylebox_override("panel", CustomStyles.create_save_slot_empty())
			else:
				slot.add_theme_stylebox_override("panel", CustomStyles.create_save_slot_filled())


func _setup_button_style(button: Button):
	var style = StyleBoxFlat.new()
	style.bg_color = Color(1, 1, 1, 0.95)
	style.corner_radius_top_left = 20
	style.corner_radius_top_right = 20
	style.corner_radius_bottom_left = 20
	style.corner_radius_bottom_right = 20
	style.shadow_size = 8
	style.shadow_offset = Vector2(0, 4)
	style.shadow_color = Color(0, 0, 0, 0.3)
	style.border_width_left = 3
	style.border_width_right = 3
	style.border_width_top = 3
	style.border_width_bottom = 3
	style.border_color = Color(0.9, 0.9, 0.9, 1)

	button.add_theme_stylebox_override("normal", style)

	# í˜¸ë²„ ìŠ¤íƒ€ì¼
	var hover_style = style.duplicate()
	hover_style.bg_color = Color(1, 0.95, 0.8, 1)
	hover_style.border_color = ThemeManager.ACCENT
	hover_style.shadow_size = 12
	button.add_theme_stylebox_override("hover", hover_style)

	# ëˆ„ë¦„ ìŠ¤íƒ€ì¼
	var pressed_style = style.duplicate()
	pressed_style.bg_color = Color(0.9, 0.9, 0.9, 1)
	pressed_style.shadow_size = 2
	pressed_style.shadow_offset = Vector2(0, 1)
	button.add_theme_stylebox_override("pressed", pressed_style)

	button.add_theme_color_override("font_color", Color(0.2, 0.2, 0.3, 1))
	button.add_theme_color_override("font_hover_color", Color(0.1, 0.1, 0.2, 1))


func _connect_buttons():
	if career_btn:
		career_btn.pressed.connect(_on_career_pressed)
		career_btn.mouse_entered.connect(func(): _on_button_hover(career_btn, true))
		career_btn.mouse_exited.connect(func(): _on_button_hover(career_btn, false))

	if myteam_btn:
		myteam_btn.pressed.connect(_on_myteam_pressed)
		myteam_btn.mouse_entered.connect(func(): _on_button_hover(myteam_btn, true))
		myteam_btn.mouse_exited.connect(func(): _on_button_hover(myteam_btn, false))

	if personality_demo_btn:
		personality_demo_btn.pressed.connect(_on_personality_demo_pressed)
		personality_demo_btn.mouse_entered.connect(func(): _on_button_hover(personality_demo_btn, true))
		personality_demo_btn.mouse_exited.connect(func(): _on_button_hover(personality_demo_btn, false))

	if options_btn:
		options_btn.pressed.connect(_on_options_pressed)

	if exit_btn:
		exit_btn.pressed.connect(_on_exit_pressed)

	# ì„¸ì´ë¸Œ ìŠ¬ë¡¯ íŒì—…
	var close_btn = $SaveSlotsPopup/VBox/CloseButton
	if close_btn:
		close_btn.pressed.connect(_close_save_slots)

	var slots = [
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot1,
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot2,
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot3
	]
	for slot in slots:
		if slot and slot.has_signal("slot_loaded"):
			slot.slot_loaded.connect(_load_save_slot)

	# ì‚¬ìš´ë“œ í† ê¸€
	if music_toggle:
		music_toggle.pressed.connect(_toggle_music)
	if sound_toggle:
		sound_toggle.pressed.connect(_toggle_sound)

	# ì–¸ì–´ ì„ íƒ ë²„íŠ¼ë“¤
	if language_button:
		language_button.pressed.connect(_on_language_button_pressed)

	if korean_button:
		korean_button.pressed.connect(func(): _select_language("Korean"))
	if english_button:
		english_button.pressed.connect(func(): _select_language("English"))
	if japanese_button:
		japanese_button.pressed.connect(func(): _select_language("Japanese"))
	if chinese_button:
		chinese_button.pressed.connect(func(): _select_language("Chinese"))

	if select_button:
		select_button.pressed.connect(_on_select_language_pressed)


func _initialize_animations():
	# ë¯¸ë‹ˆ ìºë¦­í„° ì†ë„ ì„¤ì •
	for i in range(mini_characters.size()):
		character_speeds.append(randf_range(50, 150))

	# êµ¬ë¦„ ì†ë„ ì„¤ì •
	for i in range(clouds.size()):
		cloud_speeds.append(randf_range(20, 60))


func _animate_title_entrance():
	# íƒ€ì´í‹€ ì§„ì… ì• ë‹ˆë©”ì´ì…˜
	if main_title:
		main_title.modulate.a = 0
		main_title.position.y = -50

		var tween = get_tree().create_tween()
		tween.set_parallel(true)
		tween.tween_property(main_title, "modulate:a", 1.0, 0.5)
		tween.tween_property(main_title, "position:y", 0, 0.5).set_ease(Tween.EASE_OUT).set_trans(Tween.TRANS_BOUNCE)

	if sub_title:
		sub_title.modulate.a = 0
		var tween = get_tree().create_tween()
		tween.tween_interval(0.3)
		tween.tween_property(sub_title, "modulate:a", 1.0, 0.5)


func _animate_menu_entrance():
	# ë©”ë‰´ ë²„íŠ¼ ìˆœì°¨ì  ì§„ì…
	var buttons = [career_btn, myteam_btn, options_btn, exit_btn]
	var delay = 0.0

	for button in buttons:
		if button:
			button.modulate.a = 0
			button.position.x = -100

			var tween = get_tree().create_tween()
			tween.tween_interval(delay)
			tween.set_parallel(true)
			tween.tween_property(button, "modulate:a", 1.0, 0.3)
			tween.tween_property(button, "position:x", 0, 0.3).set_ease(Tween.EASE_OUT).set_trans(Tween.TRANS_CUBIC)

			delay += 0.1


func _process(delta):
	time_passed += delta

	# ë¯¸ë‹ˆ ìºë¦­í„° ì›€ì§ì„
	_animate_mini_characters(delta)

	# êµ¬ë¦„ ì›€ì§ì„
	_animate_clouds(delta)

	# íƒ€ì´í‹€ í”Œë¡œíŒ… íš¨ê³¼
	_animate_title_floating()


func _animate_mini_characters(delta):
	# ë°°ì—´ì´ ì œëŒ€ë¡œ ì´ˆê¸°í™”ë˜ì§€ ì•Šì•˜ê±°ë‚˜ ë¹„ì–´ìˆìœ¼ë©´ ê±´ë„ˆë›°ê¸°
	if mini_characters.is_empty() or character_speeds.is_empty():
		return

	for i in range(mini_characters.size()):
		if i >= character_speeds.size() or not mini_characters[i]:
			continue

		var character = mini_characters[i]
		var speed = character_speeds[i]

		# ì¢Œìš° ì´ë™
		character.position.x += speed * delta

		# í™”ë©´ ë°–ìœ¼ë¡œ ë‚˜ê°€ë©´ ë°˜ëŒ€í¸ì—ì„œ ë‚˜íƒ€ë‚¨
		if character.position.x > get_viewport_rect().size.x + 100:
			character.position.x = -100
			# ëœë¤í•˜ê²Œ Y ìœ„ì¹˜ ë³€ê²½
			character.position.y = randf_range(1000, 1400)
			# ì†ë„ë„ ëœë¤ ë³€ê²½
			character_speeds[i] = randf_range(50, 150)

		# ìœ„ì•„ë˜ ë°”ìš´ì‹±
		character.position.y += sin(time_passed * 3 + i) * 2


func _animate_clouds(delta):
	# ë°°ì—´ì´ ì œëŒ€ë¡œ ì´ˆê¸°í™”ë˜ì§€ ì•Šì•˜ê±°ë‚˜ ë¹„ì–´ìˆìœ¼ë©´ ê±´ë„ˆë›°ê¸°
	if clouds.is_empty() or cloud_speeds.is_empty():
		return

	for i in range(clouds.size()):
		if i >= cloud_speeds.size() or not clouds[i]:
			continue

		var cloud = clouds[i]
		var speed = cloud_speeds[i]

		# ì¢Œì¸¡ìœ¼ë¡œ ì´ë™
		cloud.position.x -= speed * delta

		# í™”ë©´ ë°–ìœ¼ë¡œ ë‚˜ê°€ë©´ ì˜¤ë¥¸ìª½ì—ì„œ ë‚˜íƒ€ë‚¨
		if cloud.position.x < -200:
			cloud.position.x = get_viewport_rect().size.x + 100
			cloud.position.y = randf_range(50, 300)
			cloud_speeds[i] = randf_range(20, 60)


func _animate_title_floating():
	if main_title:
		main_title.position.y = sin(time_passed * 2) * 10


func _on_button_hover(button: Button, is_hovering: bool):
	if not button:
		return

	if is_hovering:
		# ë°”ìš´ìŠ¤ ì• ë‹ˆë©”ì´ì…˜
		var tween = get_tree().create_tween()
		tween.tween_property(button, "scale", Vector2(1.1, 1.1), 0.1).set_ease(Tween.EASE_OUT).set_trans(
			Tween.TRANS_ELASTIC
		)

		# ì¶•êµ¬ê³µ ì´ëª¨ì§€ ì¶”ê°€ ì• ë‹ˆë©”ì´ì…˜
		_spawn_ball_effect(button.global_position + button.size / 2)
	else:
		# ì›ë˜ í¬ê¸°ë¡œ
		var tween = get_tree().create_tween()
		tween.tween_property(button, "scale", Vector2(1.0, 1.0), 0.2)


func _spawn_ball_effect(pos: Vector2):
	var ball = Label.new()
	ball.text = "âš½"
	ball.add_theme_font_size_override("font_size", 32)
	ball.position = pos
	add_child(ball)

	# ìœ„ë¡œ ë– ì˜¤ë¥´ë©° ì‚¬ë¼ì§€ëŠ” ì• ë‹ˆë©”ì´ì…˜
	var tween = get_tree().create_tween()
	tween.set_parallel(true)
	tween.tween_property(ball, "position:y", pos.y - 100, 0.5)
	tween.tween_property(ball, "modulate:a", 0.0, 0.5)
	tween.set_parallel(false)
	tween.tween_callback(ball.queue_free)


func _on_career_pressed():
	print("[TitleScreenImproved] ìœ¡ì„±ê²Œì„ pressed - going to save slot selection")

	# í™”ë©´ ì „í™˜ ì• ë‹ˆë©”ì´ì…˜
	var tween = get_tree().create_tween()
	tween.tween_property(self, "modulate:a", 0.0, 0.3)
	tween.tween_callback(
		func():
			# CareerIntroScreen (ì„¸ì´ë¸Œ ìŠ¬ë¡¯ ì„ íƒ)ìœ¼ë¡œ ì´ë™
			get_tree().change_scene_to_file("res://scenes/CareerIntroScreen.tscn")
	)


func _on_myteam_pressed():
	print("[TitleScreenImproved] My team pressed")
	if UIManager:
		UIManager.push("res://scenes/MyTeamScreen.tscn")


func _on_personality_demo_pressed():
	print("[TitleScreenImproved] Personality demo pressed")
	# PersonAttributes í…ŒìŠ¤íŠ¸ í™”ë©´ìœ¼ë¡œ ì´ë™
	# DEPRECATED: PersonalityDemo.tscn has been archived
	# get_tree().change_scene_to_file("res://scenes/PersonalityDemo.tscn")


func _on_options_pressed():
	print("[TitleScreenImproved] Options pressed")
	# ì˜µì…˜ í™”ë©´ í‘œì‹œ


func _on_exit_pressed():
	print("[TitleScreenImproved] Exit pressed")
	get_tree().quit()


func _show_save_slots():
	if save_slots_popup:
		save_slots_popup.visible = true
		save_slots_popup.modulate.a = 0
		save_slots_popup.scale = Vector2(0.8, 0.8)

		var tween = get_tree().create_tween()
		tween.set_parallel(true)
		tween.tween_property(save_slots_popup, "modulate:a", 1.0, 0.3)
		tween.tween_property(save_slots_popup, "scale", Vector2(1.0, 1.0), 0.3).set_ease(Tween.EASE_OUT).set_trans(
			Tween.TRANS_BACK
		)

		# ì„¸ì´ë¸Œ ìŠ¬ë¡¯ ì •ë³´ ì—…ë°ì´íŠ¸
		_update_save_slots_info()


func _close_save_slots():
	if save_slots_popup:
		var tween = get_tree().create_tween()
		tween.set_parallel(true)
		tween.tween_property(save_slots_popup, "modulate:a", 0.0, 0.2)
		tween.tween_property(save_slots_popup, "scale", Vector2(0.8, 0.8), 0.2)
		tween.set_parallel(false)
		tween.tween_callback(func(): save_slots_popup.visible = false)


func _toggle_music():
	print("[TitleScreenImproved] Music toggled")
	if music_toggle:
		music_toggle.text = "ğŸ”‡" if music_toggle.text == "ğŸµ" else "ğŸµ"


func _toggle_sound():
	print("[TitleScreenImproved] Sound toggled")
	if sound_toggle:
		sound_toggle.text = "ğŸ”ˆ" if sound_toggle.text == "ğŸ”Š" else "ğŸ”Š"


# ì–¸ì–´ ì„ íƒ ê´€ë ¨ í•¨ìˆ˜ë“¤
func _on_language_button_pressed():
	print("[TitleScreenImproved] Language button pressed")
	if language_popup:
		language_popup.popup_centered()
		_update_language_button_styles()


func _select_language(language: String):
	print("[TitleScreenImproved] Language selected: %s" % language)
	selected_language = language
	_update_language_button_styles()


func _on_select_language_pressed():
	print("[TitleScreenImproved] Language confirmed: %s" % selected_language)
	if language_popup:
		language_popup.hide()

	# ì–¸ì–´ ì„¤ì • ì €ì¥ ë° ì ìš©
	_apply_language_settings(selected_language)

	# ì–¸ì–´ ë²„íŠ¼ í…ìŠ¤íŠ¸ ì—…ë°ì´íŠ¸
	_update_language_button_text()


func _update_language_button_styles():
	# ëª¨ë“  ì–¸ì–´ ë²„íŠ¼ ìŠ¤íƒ€ì¼ ì´ˆê¸°í™”
	var language_buttons = [korean_button, english_button, japanese_button, chinese_button]
	for button in language_buttons:
		if button:
			button.modulate = Color.WHITE

	# ì„ íƒëœ ì–¸ì–´ ë²„íŠ¼ í•˜ì´ë¼ì´íŠ¸
	var selected_button = null
	match selected_language:
		"Korean":
			selected_button = korean_button
		"English":
			selected_button = english_button
		"Japanese":
			selected_button = japanese_button
		"Chinese":
			selected_button = chinese_button

	if selected_button:
		selected_button.modulate = Color.YELLOW


func _update_language_button_text():
	if language_button:
		var language_text = "ğŸŒ "
		match selected_language:
			"Korean":
				language_text += "í•œêµ­ì–´"
			"English":
				language_text += "English"
			"Japanese":
				language_text += "æ—¥æœ¬èª"
			"Chinese":
				language_text += "ä¸­æ–‡"
		language_button.text = language_text


func _apply_language_settings(language: String):
	# ì–¸ì–´ ì„¤ì •ì„ ì €ì¥í•˜ê³  ê²Œì„ ì „ì²´ì— ì ìš©
	print("[TitleScreenImproved] Applying language: %s" % language)

	# ì—¬ê¸°ì— ì‹¤ì œ ì–¸ì–´ ì„¤ì • ë¡œì§ ì¶”ê°€
	# ì˜ˆ: TranslationServer.set_locale(), ì„¤ì • íŒŒì¼ ì €ì¥ ë“±


func _update_save_slots_info():
	"""ì„¸ì´ë¸Œ ìŠ¬ë¡¯ ì •ë³´ ì—…ë°ì´íŠ¸ (Refactored)"""
	print("[TitleScreenImproved] Updating save slots info...")

	var slots = [
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot1,
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot2,
		$SaveSlotsPopup/VBox/ScrollContainer/SlotsContainer/Slot3
	]

	for i in range(slots.size()):
		var slot = slots[i]
		var slot_num = i + 1

		if slot and SaveManager:
			var info = SaveManager.get_slot_info(slot_num)
			# The new SaveSlot.gd script is attached to the slot, so we can just call update_info
			if slot.has_method("update_info"):
				slot.update_info(info, slot_num)
			else:
				push_error("Slot node is missing the SaveSlot.gd script or its update_info method.")


func _load_save_slot(slot_number: int):
	"""ì„¸ì´ë¸Œ ìŠ¬ë¡¯ ë¡œë“œ"""
	print("[TitleScreenImproved] Loading save slot %d..." % slot_number)

	if SaveManager:
		if SaveManager.load_from_slot(slot_number):
			print("[TitleScreenImproved] Save slot %d loaded successfully!" % slot_number)

			# HomeImproved (ìœ¡ì„± ê²Œì„ ë©”ì¸)ë¡œ ì „í™˜
			var tween = get_tree().create_tween()
			tween.tween_property(self, "modulate:a", 0.0, 0.3)
			tween.tween_callback(func(): get_tree().change_scene_to_file("res://scenes/HomeImproved.tscn"))
		else:
			print("[TitleScreenImproved] Failed to load save slot %d!" % slot_number)
			# ì—ëŸ¬ ë©”ì‹œì§€ í‘œì‹œ (ë‚˜ì¤‘ì— êµ¬í˜„)
